Winfrom初版的VisionPro软件初版功能

--- a/Audio900.csproj
+++ b/Audio900.csproj
@@ -70,6 +70,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\Cognex\VisionPro\ReferencedAssemblies\Cognex.VisionPro.dll</HintPath>
     </Reference>
+    <Reference Include="Cognex.VisionPro.Controls, Version=59.2.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505" />
     <Reference Include="Cognex.VisionPro.Core, Version=59.2.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\Cognex\VisionPro\ReferencedAssemblies\Cognex.VisionPro.Core.dll</HintPath>
@@ -160,6 +161,12 @@
     </Compile>
     <Compile Include="Views\CreateTemplateWindow.Designer.cs">
       <DependentUpon>CreateTemplateWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StepControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\StepControl.Designer.cs">
+      <DependentUpon>StepControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
