1.重构多相机管理类和相机服务类重复问题 2.解决运行任务过程中拍摄新图片拿到的是旧图的问题

--- a/Audio900.csproj
+++ b/Audio900.csproj
@@ -133,6 +133,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebugHelper\toolBlock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DebugHelper\toolBlock.Designer.cs">
+      <DependentUpon>toolBlock.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +181,9 @@
     <Compile Include="Views\StepControl.Designer.cs">
       <DependentUpon>StepControl.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DebugHelper\toolBlock.resx">
+      <DependentUpon>toolBlock.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
