--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="3.2.0" targetFramework="net48" />
-  <package id="Microsoft.ML.OnnxRuntime.Gpu" version="1.23.2" targetFramework="net48" />
-  <package id="Microsoft.ML.OnnxRuntime.Gpu.Linux" version="1.23.2" targetFramework="net48" />
-  <package id="Microsoft.ML.OnnxRuntime.Gpu.Windows" version="1.23.2" targetFramework="net48" />
+  <package id="Microsoft.ML.OnnxRuntime" version="1.23.2" targetFramework="net48" />
   <package id="Microsoft.ML.OnnxRuntime.Managed" version="1.23.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NLog" version="5.2.8" targetFramework="net48" />
