1.编辑设置yolo的ROI检测区域功能，采用CogRectangleAffine 2.运行任务的时候进行取值绘制，判定识别框的中心区域是否在搜索区域内

--- a/Audio900.csproj
+++ b/Audio900.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Views\CreateTemplateWindow.Designer.cs">
       <DependentUpon>CreateTemplateWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\SetROIWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SetROIWindow.Designer.cs" />
     <Compile Include="Views\StepControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
