量测软件增加员工作业图片自动采集功能，用户图片的标注和训练

--- a/Audio900.csproj
+++ b/Audio900.csproj
@@ -218,6 +218,10 @@
     <Compile Include="Views\CreateTemplateWindow.Designer.cs">
       <DependentUpon>CreateTemplateWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\DataCollectionWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\DataCollectionWindow.Designer.cs" />
     <Compile Include="Views\SetROIWindow.cs">
       <SubType>Form</SubType>
     </Compile>
